--- a/main.html
+++ b/main.html
@@ -8,6 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav id="Navbar">
+		<ul>
+			<li><a href="https://www.youtube.com/results?search_query=acciojob+pay+after+placement">AccioJobs Youtube 1</a></li>
+			<li><a href="https://www.youtube.com/results?search_query=acciojob+pay+after+placement">AccioJobs Youtube 2</a></li>
+			<li><a href="https://www.youtube.com/results?search_query=acciojob+pay+after+placement">AccioJobs Youtube 3</a></li>
+		</ul>
+	</nav>
+
+	<section >
+		<h2>3 random audios</h2>
+
+		<audio controls>
+			<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+		</audio>
+
+		<audio controls>
+			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+		</audio>
+
+		<audio controls>
+			<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+		</audio>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
