--- a/main.html
+++ b/main.html
@@ -8,11 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<nav id="Navbar">
+	<nav>
 		<ul>
 			<li><a href="https://www.youtube.com/results?search_query=acciojob+pay+after+placement">AccioJobs Youtube 1</a></li>
-			<li><a href="https://www.youtube.com/results?search_query=acciojob+pay+after+placement">AccioJobs Youtube 2</a></li>
-			<li><a href="https://www.youtube.com/results?search_query=acciojob+pay+after+placement">AccioJobs Youtube 3</a></li>
+			<li><a href="https://www.youtube.com/shorts/KNHh-gMC-Z0">AccioJobs Youtube 2</a></li>
+			<li><a href="https://www.youtube.com/shorts/0rcy_tlDYiU">AccioJobs Youtube 3</a></li>
 		</ul>
 	</nav>
 
