--- a/main.html
+++ b/main.html
@@ -34,8 +34,7 @@
 			Your Browser does not support the audio element.
 		</audio>
 	</section>
-    <script type="text/javascript" src="./script.js">
-</script>
+    <script type="text/javascript" src="./script.js"></script>
 
 </body>
 
