--- a/main.html
+++ b/main.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Semantic Navbar & Audios</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<nav>
-		<ul>
-			<li><a href="https://www.youtube.com/results?search_query=acciojob+pay+after+placement">AccioJobs Youtube 1</a></li>
-			<li><a href="https://www.youtube.com/shorts/KNHh-gMC-Z0">AccioJobs Youtube 2</a></li>
-			<li><a href="https://www.youtube.com/shorts/0rcy_tlDYiU">AccioJobs Youtube 3</a></li>
-		</ul>
-	</nav>
+  <!-- the entire body must be written by student -->
 
-	<section >
-		<h2>3 random audios</h2>
+  <!-- Navigation -->
+  <nav>
+    <ul>
+      <li><a href="https://www.youtube.com/results?search_query=acciojob+pay+after+placement">AccioJobs Youtube 1</a></li>
+      <li><a href="https://www.youtube.com/shorts/KNHh-gMC-Z0">AccioJobs Youtube 2</a></li>
+      <li><a href="https://www.youtube.com/shorts/0rcy_tlDYiU">AccioJobs Youtube 3</a></li>
+    </ul>
+  </nav>
 
-		<audio controls>
-			<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
-			Your Browser does not support the audio element.
-		</audio>
+  <!-- Audio Section -->
+  <section>
+    <h2>3 random audios</h2>
 
-		<audio controls>
-			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-			Your Browser does not support the audio element.
-		</audio>
+    <audio controls>
+      <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
 
-		<audio controls>
-			<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
-			Your Browser does not support the audio element.
-		</audio>
-	</section>
-    <script type="text/javascript" src="./script.js"></script>
+    <audio controls>
+      <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+      Your browser does not support the audio element.
+    </audio>
 
+    <audio controls>
+      <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+  </section>
+
+  <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
