--- a/main.html
+++ b/main.html
@@ -10,7 +10,14 @@
 <body>
   <!-- the entire body must be written by student -->
 
-  
+  <!-- Navigation -->
+  <nav>
+    <ul>
+      <li><a href="https://www.youtube.com/results?search_query=acciojob+pay+after+placement">AccioJobs Youtube 1</a></li>
+      <li><a href="https://www.youtube.com/shorts/KNHh-gMC-Z0">AccioJobs Youtube 2</a></li>
+      <li><a href="https://www.youtube.com/shorts/0rcy_tlDYiU">AccioJobs Youtube 3</a></li>
+    </ul>
+  </nav>
 
   <!-- Audio Section -->
   <section>
@@ -30,9 +37,9 @@
       <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
+
   </section>
 
-  <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
