--- a/main.html
+++ b/main.html
@@ -21,27 +21,18 @@
 
   <!-- Audio Section -->
   
-    <h2>3 random audios</h2>
+    
 
-    <audio controls>
-      <source src="http://commondatastorage.googleapis.com/codeskulptor
-		  -demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing
-		  _Game.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-    </audio>
-
-    <audio controls>
-      <source src="http://commondatastorage.googleapis.com/codeskulptor-assets
-		  /Epoq-Lepidoptera.ogg" type="audio/ogg">
-      Your browser does not support the audio element.
-    </audio>
-
-    <audio controls>
-      <source src="http://codeskulptor-demos.commondatastorage.googleapis.com
-		  /pang/paza-moduless.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-    </audio>
-
+	<h2>3 random audios</h2>
+	<audio controls>
+	    <source src="URL_1" type="audio/mpeg">
+	</audio>
+	<audio controls>
+	    <source src="URL_2" type="audio/ogg">
+	</audio>
+	<audio controls>
+	    <source src="URL_3" type="audio/mpeg">
+	</audio>
 
 </body>
 
