--- a/main.html
+++ b/main.html
@@ -25,13 +25,14 @@
 
 	<h2>3 random audios</h2>
 	<audio controls>
-	    <source src="URL_1" type="audio/mpeg">
+	    <source src="http://commondatastorage.googleapis.com/codes
+			kulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
 	</audio>
 	<audio controls>
-	    <source src="URL_2" type="audio/ogg">
+	    <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
 	</audio>
 	<audio controls>
-	    <source src="URL_3" type="audio/mpeg">
+	    <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
 	</audio>
 
 </body>
