--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Semantic Navbar & Audios</title>
-  <link rel="stylesheet" href="styles.css">
+  
 </head>
 
 <body>
@@ -21,10 +21,9 @@
 
   <!-- Audio Section -->
   
-    
 
 	<h2>3 random audios</h2>
-	<audio controls>
+	<audio controls aria-label="Kangaroo Music">
 	    <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
 		Your browser does not support the audio element.
 	</audio>
