--- a/main.html
+++ b/main.html
@@ -10,31 +10,34 @@
 <body>
   <!-- the entire body must be written by student -->
 
-  <!-- Navigation -->
+  <!-- Part 1: Navigation Bar -->
   <nav>
     <ul>
-      <li><a href="https://www.youtube.com/results?search_query=acciojob+pay+after+placement">AccioJobs Youtube 1</a></li>
-      <li><a href="https://www.youtube.com/shorts/KNHh-gMC-Z0">AccioJobs Youtube 2</a></li>
-      <li><a href="https://www.youtube.com/shorts/0rcy_tlDYiU">AccioJobs Youtube 3</a></li>
+      <li><a href="https://www.example.com/home">Home</a></li>
+      <li><a href="https://www.example.com/about">About</a></li>
+      <li><a href="https://www.example.com/contact">Contact</a></li>
     </ul>
   </nav>
 
-  <!-- Audio Section -->
-  
+  <!-- Part 2: Audio Section -->
+  <section>
+    <h2>3 random audios</h2>
 
-	<h2>3 random audios</h2>
-	<audio controls aria-label="Kangaroo Music">
-	    <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
-		Your browser does not support the audio element.
-	</audio>
-	<audio controls>
-	    <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-		Your browser does not support the audio element.
-	</audio>
-	<audio controls>
-	    <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
-		Your browser does not support the audio element.
-	</audio>
+    <audio controls>
+      <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+
+    <audio controls>
+      <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+      Your browser does not support the audio element.
+    </audio>
+
+    <audio controls>
+      <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+  </section>
 
 </body>
 
